data/derived/sp14/progs/unify/prog4014.ml.out
Characters 80-81:
  in let x = m/10 
             ^
Error: This expression has type int -> int
       but an expression was expected of type int
